--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -19,8 +19,10 @@
       }
     ],
     "paths": {
+      "@ui/*": ["./src/components/ui/*"],
+      "@module/*": ["./src/module/*"],
+      "@app/*": ["./app/*"],
       "@/*": ["./src/*"],
-      "@app/*": ["./app/*"]
     }
   },
   "include": [
