--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,8 +19,10 @@
       }
     ],
     "paths": {
+      "@ui/*": ["./src/components/ui/*"],
+      "@modules/*": ["./src/modules/*"],
+      "@app/*": ["./app/*"],
       "@/*": ["./src/*"],
-      "@app/*": ["./app/*"]
     }
   },
   "include": [
