--- a/admin/package.json
+++ b/admin/package.json
@@ -39,7 +39,8 @@
     "react-hook-form": "^7.66.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tinymce": "^8.3.0"
+    "tinymce": "^8.3.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
