--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "react-hook-form": "^7.69.0",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
