--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
+    "nanoid": "^5.1.6",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
