--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "dompurify": "^3.3.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-cloudinary": "^6.17.5",
