force node 22 for nixpacks

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tour-base-server",
   "version": "1.0.0",
+  "engines": {
+    "node": "22"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
