--- a/admin/package.json
+++ b/admin/package.json
@@ -42,6 +42,7 @@
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.1",
+    "react-qr-code": "^2.0.18",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tinymce": "^8.3.0",
