--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.69.0",
+    "react-qr-code": "^2.0.18",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
